[metadata]
name = wsgeventlet
home-page = https://github.com/4383/wsgeventlet/
summary = Debug mod_msgi/uswgi and AMQP heartbeat with and without eventlet environment
description-file = 
    README.md
author = Hervé Beraud
author-email = herveberaud.pro@gmail.com
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    wsgeventlet

[options.extras_require]
tests = tox

[entry_points]
console_scripts =
    wsgeventlet = wsgeventlet.__main__:main

[wheel]
universal = 1

[flake8]
max-line-length = 79
